contracts/tipz/src/test/snapshots/tipz_contract__test__test_snapshots__snapshot_storage_after_tip.snap
---
source: tipz/src/test/test_snapshots.rs
expression: snap
---
StorageSnapshot {
    instance_has: {
        "Admin": true,
        "Cache.LeaderboardSet": true,
        "Cache.RuntimeConfig": true,
        "Cache.SendTipState": true,
        "ContractVersion": true,
        "FeeCollector": true,
        "FeePercent": true,
        "Initialized": true,
        "MinTipAmount": true,
        "NativeToken": true,
        "Paused": true,
        "TipCount": true,
        "TotalCreators": true,
        "TotalTipsVolume": true,
    },
    persistent_has: {
        "Profile(<creator>)": true,
        "UsernameToAddress(alice)": true,
    },
    temporary_has: {
        "Tip(0)": true,
    },
    instance_values: {
        "ContractVersion": "3",
        "FeePercent": "200",
        "Initialized": "true",
        "MinTipAmount": "1000000",
        "Paused": "false",
        "TipCount": "1",
        "TotalCreators": "1",
        "TotalTipsVolume": "10000000",
    },
    profile: Some(
        ProfileRedacted {
            owner: "<creator>",
            username: "alice",
            display_name: "Alice",
            bio: "",
            image_url: "",
            x_handle: "@alice_x",
            x_followers: 0,
            x_engagement_avg: 0,
            credit_score: 40,
            total_tips_received: 10000000,
            total_tips_count: 1,
            balance: 10000000,
            registered_at: 0,
            updated_at: 0,
            verification_is_verified: false,
        },
    ),
    tip0: Some(
        TipRedacted {
            id: 0,
            sender: "<tipper>",
            benefactor: Some(
                "<tipper>",
            ),
            creator: "<creator>",
            amount: 10000000,
            message: "Great work!",
            timestamp: 0,
            is_anonymous: false,
        },
    ),
}
